tests/snapshots/examples_fixtures/perfomance__complexity_scaling.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/perfomance/complexity_scaling.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/perfomance/complexity_scaling.flx:12:50
   |
12 |             bench_list_head(lst, reps - 1, acc + first(lst))
   |                                                  ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/perfomance/complexity_scaling.flx:20:52
   |
20 |             bench_array_first(arr, reps - 1, acc + first(arr))
   |                                                    ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/perfomance/complexity_scaling.flx:36:23
   |
36 |             let out = concat(arr, [|1|])
   |                       ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/perfomance/complexity_scaling.flx:53:23
   |
53 |             let arr = range(0, n)
   |                       ^^^^^

Hint:
  Define it first: let range = ...;


Note: Downstream Errors Suppressed

I hid 9 later-stage diagnostics (9 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 4 errors.
== stdout ==
<not executed>
